--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,45 @@
 asgiref==3.8.1
+astroid==3.2.4
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
 black==24.8.0
 cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
+dill==0.3.8
 Django==4.2.15
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 google==3.0.0
+google-api-core==2.19.1
+google-api-python-client==2.139.0
 google-auth==2.32.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.63.2
+httplib2==0.22.0
+idna==3.8
+isort==5.13.2
+mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
 phonenumbers==8.13.44
 platformdirs==4.2.2
+proto-plus==1.24.0
+protobuf==5.28.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 PyJWT==2.9.0
+pylint==3.2.7
+pyparsing==3.1.4
+python-dotenv==1.0.1
+requests==2.32.3
 rsa==4.9
 soupsieve==2.6
 sqlparse==0.5.1
 tomli==2.0.1
+tomlkit==0.13.2
 typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.2
