test build without install.sh

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ asgiref==3.8.1
 astroid==3.2.4
 azure-core==1.31.0
 azure-storage-blob==12.23.1
-# backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1
 bcrypt==4.2.0
 beautifulsoup4==4.12.3
 black==24.8.0
@@ -43,11 +43,11 @@ jmespath==1.0.1
 mccabe==0.7.0
 mongoengine==0.29.0
 mypy-extensions==1.0.0
-# numpy==1.24.4
+numpy==1.24.4
 oauth2==1.9.0.post1
 oauthlib==3.2.2
 packaging==24.1
-# pandas==2.0.3
+pandas==2.0.3
 pathspec==0.12.1
 phonenumbers==8.13.44
 pillow==10.4.0
