--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ users/serializers.txt
 listings/serializers/__pycache__/
 listings/serializers.txt
 listings/helpers/constants/__pycache__/
+feedbacks/__pycache__/
+feedbacks/api/__pycache__/
+feedbacks/models/__pycache__/
+feedbacks/serializers/__pycache__/
+helpers/__pycache__/
+helpers/constants/__pycache__/
+helpers/models/__pycache__/
+listings/migrations/__pycache__/
