--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ defusedxml==0.8.0rc2
 dill==0.3.8
 Django==4.2.15
 django-allauth==64.2.0
+django-cors-headers==4.4.0
 django-filter==24.3
 django-rest-framework-mongoengine==3.4.1
 django-social-auth==0.7.28
