--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.11
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.8.1
 astroid==3.2.4
+async-timeout==5.0.1
+attrs==24.2.0
 azure-core==1.31.0
 azure-storage-blob==12.23.1
 backports.zoneinfo==0.2.1
@@ -30,6 +36,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 dnspython==2.6.1
 ecdsa==0.19.0
+frozenlist==1.5.0
 google==3.0.0
 google-api-core==2.19.1
 google-api-python-client==2.139.0
@@ -43,6 +50,7 @@ isort==5.13.2
 jmespath==1.0.1
 mccabe==0.7.0
 mongoengine==0.29.0
+multidict==6.1.0
 mypy-extensions==1.0.0
 numpy==1.24.4
 oauth2==1.9.0.post1
@@ -53,6 +61,7 @@ pathspec==0.12.1
 phonenumbers==8.13.44
 pillow==10.4.0
 platformdirs==4.2.2
+propcache==0.2.0
 proto-plus==1.24.0
 protobuf==5.28.0
 pyasn1==0.6.0
@@ -79,8 +88,10 @@ soupsieve==2.6
 sqlparse==0.5.1
 tomli==2.0.1
 tomlkit==0.13.2
+twilio==9.3.7
 typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==1.26.20
 versioneer==0.29
+yarl==1.15.2
