--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ beautifulsoup4==4.12.3
 black==24.8.0
 boto3==1.35.44
 botocore==1.35.44
+CacheControl==0.14.1
 cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -36,13 +37,22 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 dnspython==2.6.1
 ecdsa==0.19.0
+fcm-django==2.2.1
+firebase-admin==6.6.0
 frozenlist==1.5.0
 google==3.0.0
 google-api-core==2.19.1
 google-api-python-client==2.139.0
 google-auth==2.32.0
 google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+google-cloud-storage==2.18.2
+google-crc32c==1.5.0
+google-resumable-media==2.7.2
 googleapis-common-protos==1.63.2
+grpcio==1.68.1
+grpcio-status==1.68.1
 httplib2==0.22.0
 idna==3.8
 isodate==0.7.2
@@ -50,6 +60,7 @@ isort==5.13.2
 jmespath==1.0.1
 mccabe==0.7.0
 mongoengine==0.29.0
+msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 numpy==1.24.4
@@ -86,6 +97,7 @@ six==1.16.0
 social-auth-core==4.5.4
 soupsieve==2.6
 sqlparse==0.5.1
+swapper==1.4.0
 tomli==2.0.1
 tomlkit==0.13.2
 twilio==9.3.7
