--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 condition==1.0.8
 constantly==23.10.4
-cryptography==43.0.1
+cryptography==42.0.8
 daphne==4.1.2
 defusedxml==0.8.0rc2
 dill==0.3.8
@@ -96,9 +96,10 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-openid==2.2.5
-python3-openid==3.2.0
 python-slugify==5.0.0
+python3-openid==3.2.0
 pytz==2024.2
+qrcode==7.3.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
@@ -110,6 +111,7 @@ social-auth-core==4.5.4
 soupsieve==2.6
 sqlparse==0.5.1
 swapper==1.4.0
+text-unidecode==1.3
 tomli==2.0.1
 tomlkit==0.13.2
 twilio==9.3.7
