Refactoring in , Chat API ,Notifications API,Save-Unsave API,User-ALL API,Business API,Login & Signup API, Removed unsave API endpoint & merged with save endpoint, added doc string.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,14 @@ helpers/constants/__pycache__/
 helpers/models/__pycache__/
 listings/migrations/__pycache__/
 credentials.json
+ chats/__pycache__/
+chats/api/__pycache__/
+chats/migrations/__pycache__/
+chats/models/__pycache__/
+chats/serializers/__pycache__/
+notifications/__pycache__/
+notifications/api/__pycache__/
+notifications/migrations/__pycache__/
+notifications/models/__pycache__/
+notifications/serializers/__pycache__/
+ chats/__pycache__/
