implemented edit business profile API, Delete Notification & read notification API, implemented notification for caht, implemented Active business API, fixed bugs and refactored code.

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-GOOGLE_OAUTH_CLIENT_ID=221272028067-cnm21hi90qmfp0jggj62148fetbv8qbn.apps.googleusercontent.com
-FIREBASE_CREDENTIALS=/home/muhammad/Desktop/FL/FL/Braelo/credentials.json
+GOOGLE_OAUTH_CLIENT_ID = (
+    221272028067 - cnm21hi90qmfp0jggj62148fetbv8qbn.apps.googleusercontent.com
+)
+FIREBASE_CREDENTIALS = config / credentials.json
