Fixed Migrations error.

--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-GOOGLE_OAUTH_CLIENT_ID = (
-    221272028067 - cnm21hi90qmfp0jggj62148fetbv8qbn.apps.googleusercontent.com
-)
-FIREBASE_CREDENTIALS = config / credentials.json
+GOOGLE_OAUTH_CLIENT_ID=221272028067-cnm21hi90qmfp0jggj62148fetbv8qbn.apps.googleusercontent.com
+FIREBASE_CREDENTIALS=config/credentials.json
