Added Redis, fixed bugs, refactored code in chat module.

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GOOGLE_OAUTH_CLIENT_ID=221272028067-cnm21hi90qmfp0jggj62148fetbv8qbn.apps.googleusercontent.com
+REDIS_URL=redis://:dAKoxUPcF8yJniS5c4xb7UiAhB53LaaS@redis-12486.c251.east-us-mz.azure.redns.redis-cloud.com:12486/0
+
