--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 channels==4.2.0
+channels-redis==4.2.1
 charset-normalizer==3.3.2
 click==8.1.7
 condition==1.0.8
